# SPEngine

./: CMakeLists.txt  CMakeSettings.json  README.md
sources/: main.cpp
sources/demos/openGLDemos/: CMakeLists.txt  Defines.h  example0.cpp  example0.h  example1.cpp  example1.h  example2.cpp  example2.h  helloTrigger.cpp  helloTrigger.h  linkBuiltinRes.sh  main.cpp  textureDemo.cpp  textureDemo.h  transformDemos.cpp  transformDemos.h  worksSPEngineOpenGLDemosBuildbinbuiltinRes
sources/demos/openGLDemos/common/: Camera.cpp  Camera.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
sources/demos/openGLDemos/core/: Application.cpp  Application.h
sources/demos/openGLDemos/utils/: FileUtil.cpp  FileUtil.h  MathUtil.h  ScopeGuard.h  StringUtil.cpp  StringUtil.h
